# Computer-Graphics

./: CMakeLists.txt  README.md
Lab_01/: CMakeLists.txt
Lab_01/src/: main.cpp
Lab_02/: CMakeLists.txt
Lab_02/src/: main.cpp
Lab_03/: CMakeLists.txt
Lab_03/include/: glad.h
Lab_03/src/: GLAD.c  main.cpp
Lab_04/: CMakeLists.txt
Lab_04/src/: main.cpp
Lab_05/: CMakeLists.txt
Lab_05/include/: HitInfo.h  Light.h  Object.h  Plane.h  Ray.h  Scene.h  Sphere.h  Vec3.h
Lab_05/src/: GLAD.c  Plane.cpp  Scene.cpp  Sphere.cpp  main.cpp
